--- a/app/src/main/res/layout/activity_slide_screen.xml
+++ b/app/src/main/res/layout/activity_slide_screen.xml
@@ -34,7 +34,7 @@
             android:layout_alignParentRight="true"
             android:background="@null"
             android:text="@string/button_lanjut"
-            style="@style/DarkBoldText" />
+            style="@style/WhiteBoldText" />
 
     <Button
             android:id="@+id/btn_skip"
@@ -44,6 +44,6 @@
             android:layout_alignParentLeft="true"
             android:background="@null"
             android:text="@string/button_lewati"
-            style="@style/DarkBoldText" />
+            style="@style/WhiteBoldText" />
 
 </RelativeLayout>
