--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -1,10 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Menu.FirstMenuActivity">
+        android:layout_height="match_parent">
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="Pilih Tujuan Destinasi Liburan"
+            style="@style/DarkBoldText"
+            android:layout_centerHorizontal="true"
+    />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="60dp"
+            style="@android:style/Widget.Holo.Light.Spinner"
+    />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinner1"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="30dp"
+            style="@android:style/Widget.Holo.Light.Spinner"
+    />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinner2"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="30dp"
+            style="@android:style/Widget.Holo.Light.Spinner"
+    />
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinner3"
+            android:layout_centerHorizontal="true"
+            android:text="@string/button_lanjut"
+            android:background="@drawable/bg_rounded_secondary"
+             style="@style/Button"/>
+
+</RelativeLayout>
