--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,12 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorDark</item>
     </style>
+
+    <style name="Button" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/opensans_bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
 </resources>
