--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -5,6 +5,23 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_top"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+    style="@style/ToolbarTheme">
+        <TextView
+                android:id="@+id/appname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/tittlefont"
+                android:text="@string/app_name"
+                android:textSize="30sp"
+                android:textColor="@color/white"/>
+    </androidx.appcompat.widget.Toolbar>
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv"
             android:layout_height="wrap_content"
@@ -13,6 +30,7 @@
             android:text="Pilih Tujuan Destinasi Liburan"
             style="@style/DarkBoldText"
             android:layout_centerHorizontal="true"
+            android:textAlignment="center"
     />
 
     <androidx.appcompat.widget.AppCompatSpinner
@@ -33,7 +51,7 @@
             android:layout_below="@id/spinner1"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             style="@android:style/Widget.Holo.Light.Spinner"
     />
 
@@ -44,7 +62,7 @@
             android:layout_below="@id/spinner2"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             style="@android:style/Widget.Holo.Light.Spinner"
     />
 
