--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -4,7 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_top"
@@ -33,6 +34,28 @@
             android:textAlignment="center"
     />
 
+    <RelativeLayout
+            android:id="@+id/layoutNamaPulau"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="60dp"
+            android:orientation="horizontal"
+            android:clickable="true">
+
+        <TextView
+                android:id="@+id/textInputNamaPulau"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/category_1"
+                style="@style/DarkRegularText"
+                android:background="@drawable/bg_border_bottom"
+                android:drawableEnd="@drawable/ic_arrow_forward_24dp"
+                android:alpha="0.8"/>
+    </RelativeLayout>
+
     <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
@@ -42,28 +65,82 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="60dp"
             style="@android:style/Widget.Holo.Light.Spinner"
+            android:prompt="@string/category_1"
+            android:spinnerMode="dialog"
+            android:visibility="gone"
     />
 
+    <RelativeLayout
+            android:id="@+id/layoutNamaProvinsi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutNamaPulau"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:clickable="true"
+    android:visibility="gone">
+
+        <TextView
+                android:id="@+id/textInputNamaProvinsi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/category_2"
+                style="@style/DarkRegularText"
+                android:background="@drawable/bg_border_bottom"
+                android:drawableEnd="@drawable/ic_arrow_forward_24dp"
+                android:alpha="0.8"/>
+    </RelativeLayout>
     <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/spinner2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/spinner1"
+            android:layout_below="@id/layoutNamaPulau"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             style="@android:style/Widget.Holo.Light.Spinner"
+            android:prompt="@string/category_2"
+            android:spinnerMode="dialog"
+            android:visibility="gone"
     />
+
+    <RelativeLayout
+            android:id="@+id/layoutNamaKota"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutNamaProvinsi"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:clickable="true"
+    android:visibility="gone">
+
+        <TextView
+                android:id="@+id/textInputNamaKota"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/category_3"
+                style="@style/DarkRegularText"
+                android:background="@drawable/bg_border_bottom"
+                android:drawableEnd="@drawable/ic_arrow_forward_24dp"
+                android:alpha="0.8"/>
+    </RelativeLayout>
 
     <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/spinner3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/spinner2"
+            android:layout_below="@id/layoutNamaProvinsi"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             style="@android:style/Widget.Holo.Light.Spinner"
+            android:prompt="@string/category_3"
+            android:spinnerMode="dialog"
+            android:visibility="gone"
     />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -71,7 +148,7 @@
             android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/spinner3"
+            android:layout_below="@id/layoutNamaKota"
             android:layout_centerHorizontal="true"
             android:text="@string/button_lanjut"
             android:background="@drawable/bg_rounded_secondary"
