--- a/app/src/main/res/layout/activity_first_menu.xml
+++ b/app/src/main/res/layout/activity_first_menu.xml
@@ -144,7 +144,7 @@ android:background="@color/white">
     />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn"
+            android:id="@+id/btnFirstMenu"
             android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
