--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
+<!--
+  ~ Copyright (C) 2018 The Android Open Source Project
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -15,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:theme="@style/ToolbarTheme">
+                android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
             <RelativeLayout
                     android:layout_width="match_parent"
@@ -27,7 +40,9 @@
                         android:layout_marginEnd="100dp"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        style="@style/WhiteBoldText" />
+                        android:fontFamily="@font/opensans_bold"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -52,3 +67,13 @@
                 android:state_checked="true"
         />
     </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/menu_navigation"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/bottom_nav_menu"
+            app:itemTextColor="@color/colorPrimaryDark"
+            app:headerLayout="@layout/header_drawer_menu"/>
+</androidx.drawerlayout.widget.DrawerLayout>
