--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
             android:id="@+id/secondMenuFragment"
             android:icon="@drawable/ic_sun"
-            android:title="Menu" />
+            android:title="Destinasi" />
     <item
             android:id="@+id/thirdMenuFragment"
             android:icon="@drawable/ic_star"
