--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+    android:background="@color/white">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -59,12 +60,11 @@
                 android:id="@+id/menu_bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/white"
                 app:menu="@menu/bottom_nav_menu"
                 app:elevation="10dp"
-                app:itemTextColor="@color/colorPrimaryDark"
-                app:itemIconTint="@color/white"
                 android:state_checked="true"
+
         />
     </LinearLayout>
 
