--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -5,24 +5,20 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-android:background="@color/white">
+        android:background="@color/white">
 
-    <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_top"
+    <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:minHeight="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-    style="@style/ToolbarTheme">
-        <TextView
-                android:id="@+id/appname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/tittlefont"
-                android:text="@string/app_name"
-                android:textSize="30sp"
-                android:textColor="@color/white"/>
-    </androidx.appcompat.widget.Toolbar>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="18dp"
+            app:srcCompat="@drawable/ic_arrow_back"
+        />
+
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv"
             android:layout_height="wrap_content"
@@ -80,7 +76,7 @@ android:background="@color/white">
             android:layout_marginTop="40dp"
             android:orientation="horizontal"
             android:clickable="true"
-    android:visibility="gone">
+            android:visibility="gone">
 
         <TextView
                 android:id="@+id/textInputNamaProvinsi"
@@ -116,7 +112,7 @@ android:background="@color/white">
             android:layout_marginTop="30dp"
             android:orientation="horizontal"
             android:clickable="true"
-    android:visibility="gone">
+            android:visibility="gone">
 
         <TextView
                 android:id="@+id/textInputNamaKota"
@@ -152,6 +148,6 @@ android:background="@color/white">
             android:layout_centerHorizontal="true"
             android:text="@string/button_lanjut"
             android:background="@drawable/bg_rounded_secondary"
-             style="@style/Button"/>
+            style="@style/Button"/>
 
 </RelativeLayout>
