Add navigation destination

--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/white"
+android:id="@+id/layoutDestination">
 
     <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/buttonBack"
@@ -140,7 +141,7 @@
     />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnFirstMenu"
+            android:id="@+id/btnDestination"
             android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
