--- a/app/src/main/res/layout/fragment_first_menu.xml
+++ b/app/src/main/res/layout/fragment_first_menu.xml
@@ -5,12 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Menu.FirstMenuFragment">
-
-    <TextView
-            android:layout_width="wrap_content"
+        tools:context=".Menu.FirstMenuFragment"
+android:background="@color/white">
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPromo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+    android:orientation="horizontal"
+            tools:listitem="@layout/item_promo"/>
 
 
 </RelativeLayout>
