--- a/app/src/main/res/layout/fragment_first_menu.xml
+++ b/app/src/main/res/layout/fragment_first_menu.xml
@@ -6,12 +6,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Menu.FirstMenuFragment"
+        android:orientation="vertical"
 android:background="@color/white">
+
+    <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Promo Akhir Tahun"
+            style="@style/MediumDarkBoldText"
+            android:id="@+id/tvPromo"
+    />
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvPromo"
+            android:layout_below="@id/tvPromo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-    android:orientation="horizontal"
+             android:orientation="horizontal"
             tools:listitem="@layout/item_promo"/>
 
 
