--- a/app/src/main/res/layout/item_promo.xml
+++ b/app/src/main/res/layout/item_promo.xml
@@ -11,15 +11,15 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="match_parent"
             android:background="@color/colorAccent"
             android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewPromo"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
                  />
 
     </LinearLayout>
