--- a/app/src/main/res/layout/fragment_third_menu.xml
+++ b/app/src/main/res/layout/fragment_third_menu.xml
@@ -1,14 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:background="@color/white"
              tools:context=".Menu.ThirdMenuFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+<RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layoutNullWishlist"
+>
 
-</FrameLayout>
+
+   <androidx.appcompat.widget.AppCompatImageView
+           android:layout_width="200dp"
+           android:layout_height="200dp"
+   android:background="@drawable/ic_sad"
+   android:layout_centerHorizontal="true"
+   android:layout_marginTop="50dp"
+   android:id="@+id/img_sad"/>
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvUps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/MediumDarkBoldText"
+            android:gravity="center_horizontal"
+            android:layout_below="@id/img_sad"
+            android:text="UPS! Anda Belum Mempunyai Wishlist Untuk Ditampilkan."/>
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvUps2"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/DarkRegularText"
+            android:gravity="center_horizontal"
+            android:layout_below="@id/tvUps"
+            android:text="Tambahkan Destinasi Liburan Anda Ke Wishlist."/>
+    <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginTop="10dp"
+            android:id="@+id/btnAddWishlist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Tambah"
+            android:background="@drawable/bg_rounded_secondary"
+            style="@style/Button"
+    android:layout_below="@id/tvUps2"/>
+</RelativeLayout >
+
+</RelativeLayout>
