--- a/app/src/main/res/layout/fragment_first_menu.xml
+++ b/app/src/main/res/layout/fragment_first_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Menu.FirstMenuFragment"
@@ -57,6 +60,7 @@ android:background="@color/white">
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnGoToWishlist"
+            android:layout_marginTop="5dp"
             android:layout_below="@id/tvGoToWishlist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,3 +69,4 @@ android:background="@color/white">
             android:background="@drawable/bg_rounded_secondary"
             style="@style/Button"/>
 </RelativeLayout>
+</ScrollView>
