--- a/app/src/main/res/layout/item_promo.xml
+++ b/app/src/main/res/layout/item_promo.xml
@@ -5,14 +5,14 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="200dp"
                                     android:layout_marginBottom="16dp"
-                                    android:background="@color/colorAccent"
+                                    android:background="@color/colorPrimaryDark"
                                     card_view:cardCornerRadius="8dp"
                                     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageView
