--- a/app/src/main/res/layout/item_rekomendasi.xml
+++ b/app/src/main/res/layout/item_rekomendasi.xml
@@ -5,18 +5,18 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="16dp"
-                                    android:background="@color/colorAccent"
+                                    android:background="@color/colorPrimaryDark"
                                     card_view:cardCornerRadius="8dp"
                                     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewRekomendasi"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"/>
@@ -25,15 +25,12 @@
                 android:id="@+id/tvNameRekomendasi"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:gravity="center_horizontal"
-                android:text="@string/app_name"
                 style="@style/MediumDarkBoldText"/>
 
         <TextView
                 android:id="@+id/tvLokasiRekomendasi"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="@string/app_name"
                 style="@style/DarkRegularText"
         android:drawableStart="@drawable/ic_location"/>
 
