--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,11 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
+    <style name="TabText" parent="TextAppearance.Design.Tab">
+    <item name="android:textSize">14sp</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="textAllCaps">false</item>
+    <item name="android:fontFamily">@font/opensans_bold</item>
+    </style>
+
 </resources>
