implement item rv

--- a/app/src/main/res/layout/item_hotel.xml
+++ b/app/src/main/res/layout/item_hotel.xml
@@ -1,7 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                   android:id="@+id/card_view_vacation"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:layout_marginBottom="16dp"
+                                   android:background="@color/colorPrimaryDark"
+                                   card_view:cardCornerRadius="8dp"
+                                   card_view:cardUseCompatPadding="true">
 
-</LinearLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/colorPrimaryDark"
+            android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageViewHotel"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"/>
+
+        <TextView
+                android:id="@+id/tvNameHotel"
+                android:layout_width="370dp"
+                android:layout_height="30dp"
+                style="@style/MediumDarkBoldText"
+                android:layout_below="@id/imageViewHotel"
+        />
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageViewWishlist"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_star"
+                android:scaleType="centerCrop"
+                android:layout_below="@+id/imageViewHotel"
+                android:layout_toEndOf="@id/tvNameHotel"
+        />
+
+        <TextView
+                android:id="@+id/tvLokasiHotel"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                style="@style/DarkRegularText"
+                android:drawableStart="@drawable/ic_location"
+                android:layout_below="@id/tvNameHotel"/>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
