implement function rv on vacation,restaurant,hotel. fixed adapter & edit layout

--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -23,21 +23,11 @@
 
         <TextView
                 android:id="@+id/tvNameRestaurant"
-                android:layout_width="370dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 style="@style/MediumDarkBoldText"
                 android:layout_below="@id/imageViewRestaurant"
-        />
-
-
-        <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageViewWishlist"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/ic_star"
-                android:scaleType="centerCrop"
-                android:layout_below="@+id/imageViewRestaurant"
-                android:layout_toEndOf="@id/tvNameRestaurant"
+                android:drawableEnd="@drawable/ic_star"
         />
 
         <TextView
