--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -9,7 +9,7 @@
               tools:context=".Destination.HotelFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/customerRecyclerView"
+            android:id="@+id/hotelRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_hotel" />
