--- a/app/src/main/res/layout/item_hotel.xml
+++ b/app/src/main/res/layout/item_hotel.xml
@@ -23,22 +23,13 @@
 
         <TextView
                 android:id="@+id/tvNameHotel"
-                android:layout_width="370dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 style="@style/MediumDarkBoldText"
                 android:layout_below="@id/imageViewHotel"
+                android:drawableEnd="@drawable/ic_star"
         />
 
-
-        <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageViewWishlist"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/ic_star"
-                android:scaleType="centerCrop"
-                android:layout_below="@+id/imageViewHotel"
-                android:layout_toEndOf="@id/tvNameHotel"
-        />
 
         <TextView
                 android:id="@+id/tvLokasiHotel"
