--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -111,7 +111,7 @@
         <item>Malang</item>
     </string-array>
     <string-array name="jawa_jogja">
-        <item>Daerah Istimewa Yogyakarta</item>
+        <item>	</item>
     </string-array>
     <string-array name="jawa_banten">
         <item>Banten</item>
