--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,7 +14,7 @@
             android:id="@+id/layoutPromoDetail">
 
         <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/buttonBack"
+                android:id="@+id/buttonBackk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -26,11 +26,12 @@
         />
 
         <RelativeLayout
+                android:layout_marginTop="10dp"
                 android:id="@+id/imgPromo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@id/buttonBack">
+                android:layout_below="@id/buttonBackk">
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -40,25 +41,34 @@
                         android:id="@+id/detail_promo"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:background="@color/colorPrimary"
+                        android:layout_marginTop="10dp"
+
                 />
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+        android:layout_below="@id/imgPromo"
+        android:id="@+id/layoutDetail"
+        android:background="@color/colorPrimary">
+
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvNamaDestinasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/MediumDarkBoldText"
-                android:layout_below="@id/imgPromo"
-                android:text="Nama Destinasi"/>
+                android:text="Nama Destinasi"
+        />
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvLokasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/DarkRegularText"
                 android:layout_below="@id/tvNamaDestinasi"
-                android:text="Lokasi Destinasi"/>
+                android:text="Lokasi Destinasi"
+                />
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvLokasiDetail"
                 android:layout_width="match_parent"
@@ -67,25 +77,28 @@
                 android:layout_below="@id/tvLokasi"
                 android:text="Lokasi Destinasi"
                 android:drawableStart="@drawable/ic_location"
-                android:alpha="0.8"/>
+                android:alpha="0.6"
+               />
+        </RelativeLayout>
         <TextView
-                android:layout_below="@id/tvLokasiDetail"
+                android:layout_below="@id/layoutDetail"
                 android:id="@+id/tv_item_description"
                 android:layout_width="match_parent"
-                android:layout_height="301dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:lineSpacingMultiplier="1"
         />
         <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnPromoDetail"
+                android:id="@+id/btnAddWishlistt"
                 android:layout_below="@id/tv_item_description"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="Tambahkan Ke Wishlist"
                 android:background="@drawable/bg_rounded_secondary"
+                android:padding="20dp"
                 style="@style/Button"/>
 
     </RelativeLayout>
