Implement function Onclick Detail on Promo & Rekomendasi , and add more improve

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -47,6 +47,7 @@
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
         <RelativeLayout
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
         android:layout_below="@id/imgPromo"
