--- a/app/src/main/res/layout/fragment_promo_detail.xml
+++ b/app/src/main/res/layout/fragment_promo_detail.xml
@@ -14,7 +14,7 @@
             android:id="@+id/layoutPromoDetail">
 
         <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/buttonBack"
+                android:id="@+id/buttoonBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -30,17 +30,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@id/buttonBack">
+                android:layout_below="@id/buttonBack"
+        android:layout_marginTop="10dp">
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
             >
 
                 <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/detail_promo"
+
+                        android:id="@+id/detail_promoo"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:background="@color/colorPrimary"
+                        android:layout_height="400dp"
+                        android:background="@color/white"
                 />
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
